# cli-dev-tip

./: .gitignore  LICENSE  README.md  pyproject.toml
dev_tip/: cli.py  config.py  history.py  hook.py  prefetch.py  tips.py
dev_tip/ai/: __init__.py  cache.py  gemini.py  openrouter.py  prompt.py  provider.py
dev_tip/data/: tips.yaml
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_history.py  test_hook.py  test_tips.py
