[project]
name = "cli-dev-tip"
version = "0.1.2"
description = "Bite-sized developer tips in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "My-CD-ROM" },
]
keywords = ["cli", "developer", "tips", "terminal", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer",
    "rich",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/My-CD-ROM/cli-dev-tip"
Repository = "https://github.com/My-CD-ROM/cli-dev-tip"
Issues = "https://github.com/My-CD-ROM/cli-dev-tip/issues"

[project.scripts]
dev-tip = "dev_tip.cli:app"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["dev_tip"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
